--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                         <!--email-->
                     </div>
 
-                    <img class="info-image" id="autoportrait" src="img/Autoportrait.jpg" alt="drawing of mine, my autoportrait" width="300" height="300" title="Autoportrait">
+                    <img class="info-image" id="autoportrait" src="img/Autoportrait_cropped.jpg" alt="drawing of mine, my autoportrait" width="320" height="370" title="Autoportrait">
                 </header>
                 
                 <hr>
