--- a/personal_presentation.html
+++ b/personal_presentation.html
@@ -28,7 +28,7 @@
                         <a href="https://www.twitch.tv/g4st_3r" class="link" target="_blank">Twitch</a>
                     </div>
 
-                    <img class="info-image" id="autoportrait" src="img/Autoportrait.jpg" alt="drawing of mine, my autoportrait" width="300" height="300" title="Autoportrait">
+                    <img class="info-image" id="autoportrait" src="img/Autoportrait_cropped.jpg" alt="drawing of mine, my autoportrait" width="320" height="370" title="Autoportrait">
                 </header>
 
                 <hr/>
