--- a/personal_presentation.html
+++ b/personal_presentation.html
@@ -7,7 +7,7 @@
             <link rel="preconnect" href="https://fonts.googleapis.com">
             <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
             <link href="https://fonts.googleapis.com/css2?family=Jacquard+12&display=swap" rel="stylesheet">
-            <title>Gast's Page</title>
+            <title>Gast's Presentation</title>
         </head>
         <body>
             <main>
