--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <DOCTYPE! html>
-    <html="en">
+    <html lang="en">
         <head>
             <meta charset="utf-8">
             <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
@@ -9,6 +9,7 @@
             <link href="https://fonts.googleapis.com/css2?family=Jacquard+12&display=swap" rel="stylesheet">
             <title>Gast's Page</title>
         </head>
+
         <body>
             <main>
                 <p class="asterisk">*</p>
@@ -26,16 +27,21 @@
                         <a href="https://twitter.com/G4st_3r" class="link" target="_blank">Twitter</a>
                         <a href="https://www.instagram.com/g4st_3r/" class="link" target="_blank">Instagram</a>
                         <a href="https://www.twitch.tv/g4st_3r" class="link" target="_blank">Twitch</a>
-                        <!--email-->
                     </div>
 
                     <img class="info-image" id="autoportrait" src="img/Autoportrait_cropped.jpg" alt="drawing of mine, my autoportrait" width="320" height="370" title="Autoportrait">
                 </header>
-                
-                <hr>
+
+                </hr>
+
                 <h2 class="titre">Introduction</h2>
-                <p><span class="marker">Welcome to my page !</span> Here, you will find any informations related to my <span class="marker">commissions</span> and <span class="marker">myself</span> such as my products, my ToS (Terms of Service), my prices and my pieces. If you're met with any kind of issues, you may contact me via DM on Instagram, Discord or E-Mail so I may resolve it</p>
+
+                <p>
+                    <span class="marker">Welcome to my page !</span> Here, you will find any informations related to my <span class="marker">commissions</span> and <span class="marker">myself</span> such as my products, my ToS (Terms of Service), my prices and my pieces. If you're met with any kind of issues, you may contact me via DM on Instagram, Discord or E-Mail so I may resolve it
+                </p>
+
                 <hr/>
+                
                 <a href="personal_presentation.html"><button>Personal Presentation</button></a>
                 <a href="commissions.html"><button>Commissions</button></a>
                 <p class="asterisk">*</p>
