--- a/commissions.html
+++ b/commissions.html
@@ -1,5 +1,5 @@
 <DOCTYPE! html>
-    <html="en">
+    <html lang="en">
         <head>
             <meta charset="utf-8">
             <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
@@ -9,6 +9,7 @@
             <link href="https://fonts.googleapis.com/css2?family=Jacquard+12&display=swap" rel="stylesheet">
             <title>Gast's Commissions</title>
         </head>
+
         <body>
             <main>
                 <p class="asterisk">*</p>
@@ -26,19 +27,28 @@
                         <a href="https://twitter.com/G4st_3r" class="link" target="_blank">Twitter</a>
                         <a href="https://www.instagram.com/g4st_3r/" class="link" target="_blank">Instagram</a>
                         <a href="https://www.twitch.tv/g4st_3r" class="link" target="_blank">Twitch</a>
-                        <!--email-->
                     </div>
 
                     <img class="info-image" id="autoportrait" src="img/Autoportrait_cropped.jpg" alt="drawing of mine, my autoportrait" width="320" height="370" title="Autoportrait">
                 </header>
 
                 <hr/>
+
                 <h2 class="titre">Price Sheet</h2>
+
                 <!--img price sheet-->
-                <p>If you're meaning to commission me but that you had something other in mind than what I have to offer :<br/>We may have a conversation abt it and settle on a product and a price that both sides would agree on.</p>
+                <p>
+                    If you're meaning to commission me but that you had something other in mind than what I have to offer :<br/>We may have a conversation abt it and settle on a product and a price that both sides would agree on.
+                </p>
+
                 <h2 class="titre">Terms of Service ( ToS )</h2>
-                <p>Please make sure to read the terms of service entirely and carefully as to avoid ant issues that could take place in the future.<br/>If any of the statements aren't respected, I hold the right to cancel your order.</p>
-                <p>You may contact me via DM on Instagram, Discord or even E-Mail to place an order.<br/>You can also fill the form at the bottom of the page.</p>
+
+                <p>
+                    Please make sure to read the terms of service entirely and carefully as to avoid ant issues that could take place in the future.<br/>If any of the statements aren't respected, I hold the right to cancel your order.
+                </p>
+                <p>
+                    You may contact me via DM on Instagram, Discord or even E-Mail to place an order.<br/>You can also fill the form at the bottom of the page.
+                </p>
                 <p><mark>Instagram :</mark> <a href="https://www.instagram.com/g4st_3r/" class="link" target="_blank">@g4st_3r</a>
                     <br/><mark>E-Mail :</mark> gastclearsugar@gmail.com
                     <br/><mark>Discord :</mark> @g4st_
@@ -52,7 +62,9 @@
                     <il>• You may request some minor alteractions in a resonable amount before the piece is finished and sent</il><br/>
                     <il>• You're free to use your commission as you wish for personal use only as long as I'm credited as the creator of the piece</il><br/>
                 </ul>
+
                 <h3 class="titre">DOs</h3>
+
                 <ul>
                     <il>• Humanoids</il><br/>
                     <il>• Mild horror</il><br/>
@@ -60,7 +72,9 @@
                     <il>• Animals ( still learning )</il><br/>
                     <il>• Furries ( still learning )</il><br/>
                 </ul>
+
                 <h3 class="titre">DON'Ts</h3>
+
                 <ul>
                     <il>• Heavy gore</il><br/>
                     <il>• Fetish content</il><br/>
@@ -69,10 +83,17 @@
                     <il>• NSFW</il><br/>
                     <il>• Detailed backgrounds</il><br/>
                 </ul>
+
                 <br/>
-                <p>Feel free to ask any more questions. I'm far from professional so don't be afraid when it comes to talking to me</p>
+
+                <p>
+                    Feel free to ask any more questions. I'm far from professional so don't be afraid when it comes to talking to me
+                </p>
+
                 <a href="https://forms.gle/JoRrL8mog3tXcsJAA" target="_blank"><button>Form</button></a>
+
                 <hr/>
+                
                 <a href="personal_presentation.html"><button>Personal Presentation</button></a>
                 <a href="index.html"><button>Home</button></a>
                 <p class="asterisk">*</p>
