--- a/personal_presentation.html
+++ b/personal_presentation.html
@@ -1,5 +1,5 @@
 <DOCTYPE! html>
-    <html="en">
+    <html lang="en">
         <head>
             <meta charset="utf-8">
             <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
@@ -7,7 +7,7 @@
             <link rel="preconnect" href="https://fonts.googleapis.com">
             <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
             <link href="https://fonts.googleapis.com/css2?family=Jacquard+12&display=swap" rel="stylesheet">
-            <title>Gast's Presentation</title>
+            <title>Gast's Page</title>
         </head>
         <body>
             <main>
@@ -28,14 +28,20 @@
                         <a href="https://www.twitch.tv/g4st_3r" class="link" target="_blank">Twitch</a>
                     </div>
 
-                    <img class="info-image" id="autoportrait" src="img/Autoportrait_cropped.jpg" alt="drawing of mine, my autoportrait" width="320" height="370" title="Autoportrait">
+                    <img class="info-image" id="autoportrait" src="img/Autoportrait_cropped.jpg" alt="drawing of mine, my autoportrait" width="320" height="370" title="Autoportrait">                </header>
                 </header>
 
                 <hr/>
-                <p>In progress...:3</p>
+
+                <p>
+                    In progress...:3
+                </p>
+
                 <hr/>
+
                 <a href="commissions.html"><button>Commissions</button></a>
                 <a href="index.html"><button>Home</button></a>
+
                 <p class="asterisk">*</p>
             </main>
         </body>
